PROJECT(lab_5)

CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
SET(CMAKE_CXX_STANDARD 14)

SET(AsyncIOlibSrc AsyncIO.cpp)
ADD_LIBRARY(AsyncIO SHARED ${AsyncIOlibSrc})
TARGET_LINK_LIBRARIES(AsyncIO pthread rt)

SET(MainSrc main.cpp)
ADD_EXECUTABLE(Main ${MainSrc})

TARGET_LINK_LIBRARIES(Main AsyncIO ${CMAKE_DL_LIBS})